[gd_scene load_steps=5 format=3 uid="uid://cw1olj4cprve0"]

[ext_resource type="Script" path="res://Scenes/Environmentals/Mother_Bear.gd" id="1_p5hd8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2lhut"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plhd5"]
albedo_color = Color(0.403922, 0.0352941, 0.439216, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ltkxe"]
material = SubResource("StandardMaterial3D_plhd5")

[node name="Mother_Bear" type="Area3D"]
script = ExtResource("1_p5hd8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
shape = SubResource("SphereShape3D_2lhut")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
mesh = SubResource("SphereMesh_ltkxe")

[node name="Bear_Pacing" type="AkEvent3D" parent="."]
event = {
"id": 777395070,
"name": "Bear_Pacing"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bear_Narration_1" type="AkEvent3D" parent="."]
event = {
"id": 4226296884,
"name": "Bear_Narration_1"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bear_Dialog" type="AkEvent3D" parent="."]
event = {
"id": 2366200506,
"name": "Bear_Dialog"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bear_Thanks" type="AkEvent3D" parent="."]
event = {
"id": 2829008681,
"name": "Bear_Thanks"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bears_Playing" type="AkEvent3D" parent="."]
event = {
"id": 408558777,
"name": "Bears_Playing"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bear_Narration_2" type="AkEvent3D" parent="."]
event = {
"id": 4226296887,
"name": "Bear_Narration_2"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[connection signal="end_of_event" from="Bear_Narration_1" to="." method="_on_bear_narration_1_end_of_event"]
[connection signal="end_of_event" from="Bear_Dialog" to="." method="_on_bear_dialog_end_of_event"]
[connection signal="end_of_event" from="Bear_Thanks" to="." method="_on_bear_thanks_end_of_event"]
[connection signal="end_of_event" from="Bear_Narration_2" to="." method="_on_bear_narration_2_end_of_event"]
